new_tests/semantics/scope/bad/003_GD2.cm

def global a:Int = 3+4-a+5*20
